<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <!-- Create -->
                <LinearLayout
                    android:id="@+id/create"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/menu_create_dark"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meun_title_create"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meun_title_create_detail"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Create押下時 -->
                <!-- 横スクロール -->
                <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/create_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:visibility="gone"
                    tools:context=".MenuActivity">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/mochi"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@color/menu_create_dark"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_horizontal|center_vertical"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/create_mochi"
                                android:textColor="@android:color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/create_touch"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@color/menu_create_dark"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_horizontal|center_vertical"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/create_sakuramochi"
                                android:textColor="@android:color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/create_draw"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@color/menu_create_dark"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_horizontal|center_vertical"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/create_draw"
                                android:textColor="@android:color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@color/menu_create_dark"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_horizontal|center_vertical"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/create_dango"
                                android:textColor="@android:color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

                <!-- Picture -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/picture"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/menu_picture"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meun_title_picture"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meun_title_picture_detail"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <!-- Picture 固さ選択 -->
                    <LinearLayout
                        android:id="@+id/picture_select"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <Button
                            android:id="@+id/soft"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@color/menu_picture_touch"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:textAllCaps="false"
                            android:text="@string/picture_soft"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/hard"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@color/menu_picture_touch"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:textAllCaps="false"
                            android:text="@string/picture_hard"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/veryhard"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@color/menu_picture_touch"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:textAllCaps="false"
                            android:text="@string/picture_veryhard"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/likebreak"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@color/menu_picture_touch"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:textAllCaps="false"
                            android:text="@string/picture_break"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <!-- Collection -->
                <LinearLayout
                    android:id="@+id/touch"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/menu_collection"
                    android:clickable="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meun_title_collection"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meun_title_collection_detail"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Play -->
                <LinearLayout
                    android:id="@+id/Play"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/menu_play"
                    android:clickable="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meun_title_play"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meun_title_play_detail"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>

            <!-- Information -->
            <LinearLayout
                android:id="@+id/Information"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/menu_information"
                android:clickable="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meun_title_information"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meun_title_information_detail"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>