<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <!-- Create -->
        <LinearLayout
            android:id="@+id/create"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/menu_create"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meun_title_create"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meun_title_create_detail"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Create押下時 -->
        <!-- 横スクロール -->
        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/create_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="40dp"
            android:scrollbars="none"
            android:visibility="gone"
            tools:context=".MenuActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:background="@drawable/menu_create_touch"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_mochi"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/menu_create_touch"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_sakuramochi"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/menu_create_touch"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_draw"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/menu_create_touch"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_dango"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

        <!-- Picture -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/menu_picture"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meun_title_picture"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meun_title_picture_detail"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Picture右の固さ選択 -->
            <LinearLayout
                android:id="@+id/picture_select"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <Button
                    android:id="@+id/soft"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_picture_touch"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:text="Soft"/>
                <Button
                    android:id="@+id/hard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/menu_picture_touch"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:text="Hard"/>
                <Button
                    android:id="@+id/veryhard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/menu_picture_touch"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:text="Very Hard"/>
                <Button
                    android:id="@+id/likebreak"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/menu_picture_touch"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:text="Break"/>

            </LinearLayout>

        </LinearLayout>


        <!-- Create -->
        <LinearLayout
            android:id="@+id/touch"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/menu_touch"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meun_title_collection"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meun_title_collection_detail"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>